--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
 # command to run tests
 script: 
     - "cd Tests && make testpython"
-    - "cd Tests/coverage && make coverage"
+    - "cd coverage && make coverage"
