--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ python:
   - "2.7"
 # command to install dependencies
 install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install g++-5 gcc-5
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 50
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 50
+  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 50
   - "pip install cython"
   - "sh ./install-deps.sh"
   - "CPPFLAGS='-fkeep-inline-functions -fno-inline -fprofile-arcs -ftest-coverage --coverage -O0' LDFLAGS='--coverage' python setup.py build"
